--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "e-commerce_website",
-  "private": true,
+  "homepage": "",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.16",
+    "framer-motion": "^12.23.24",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
-    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
