implementing gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce_website",
-  "homepage": "",
+  "homepage": "https://charlieemanuel.github.io/e-commerce-portfolio/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
